Bash scripts: Applied patch 1761455 from José María Fernández, thank you. Made some other changes too.
svn path=/trunk/eXist/; revision=6310


Former-commit-id: 32f10b43cfa89a862b5b320a371d63b384d2072d