@@ -14,15 +14,23 @@ usage="startup.sh [-j[jmx-port]|--jmx[=jmx-port]]\n"
 
 #DEBUG_OPTS="-Dexist.start.debug=true"
 
-SCRIPTPATH=$(dirname `/bin/pwd`/$0)
+case "$0" in
+	/*)
+		SCRIPTPATH=$(dirname "$0")
+		;;
+	*)
+		SCRIPTPATH=$(dirname "$PWD/$0")
+		;;
+esac
+
 # source common functions and settings
-. ${SCRIPTPATH}/functions.d/eXist-settings.sh
-. ${SCRIPTPATH}/functions.d/jmx-settings.sh
-. ${SCRIPTPATH}/functions.d/getopt-settings.sh
+source "${SCRIPTPATH}"/functions.d/eXist-settings.sh
+source "${SCRIPTPATH}"/functions.d/jmx-settings.sh
+source "${SCRIPTPATH}"/functions.d/getopt-settings.sh
 
-get_opts "$*" "${JETTYCONTAINER_OPTS}";
+get_opts "${JETTYCONTAINER_OPTS}" "$@";
 
-check_exist_home $0;
+check_exist_home "$0";
 
 set_exist_options;
 set_jetty_home;
@@ -36,8 +44,8 @@ set_locale_lang;
 # enable the JMX agent? If so, concat to $JAVA_OPTIONS:
 check_jmx_status;
 
-$JAVA_HOME/bin/java $JAVA_OPTIONS -Djava.endorsed.dirs=$JAVA_ENDORSED_DIRS \
-	$DEBUG_OPTS $OPTIONS -jar "$EXIST_HOME/start.jar" \
+"${JAVA_HOME}"/bin/java ${JAVA_OPTIONS} ${OPTIONS} \
+	${DEBUG_OPTS} -jar "$EXIST_HOME/start.jar" \
 	jetty ${JAVA_OPTS[@]}
 
 restore_locale_lang;
